# project_0

./: .gitignore  docker-compose.yml  dockerfile  entrypoint.sh  main.py  my_celery_app.py  pyproject.toml  pytest.ini  tasks.py
app/: database.py  logger.py  main.py  utils.py
app/collector/: celery_app.py  signals.py  tasks.py
app/models/: transaction.py
app/schemas/: transaction.py
collector/: apps.py  bot.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py
collector/management/commands/: startbot.py
collector/migrations/: 0001_initial.py  0002_alter_transaction_options_alter_transaction_table.py  0003_alter_transaction_bank_id.py  0004_remove_transaction_original_mcc.py  0005_statementfile_alter_transaction_options.py  0006_rename_original_amount_transaction_operation_amount.py
dashboard/: urls.py  views.py
dashboard/dash_apps/finished_apps/: test.py
dashboard/services/: utils.py
dashboard/services/plots/: __init__.py  bar.py  base.py  pie.py  scatter.py
dashboard/templates/dashboard/: dashboard.html  home.html
dashboard/templatetags/: navigation_tags.py
frontend/project_0/: README.md  package-lock.json  package.json
frontend/project_0/src/: App.vue  main.ts
frontend/project_0/src/assets/: base.css  (+5 more)
models/: transaction.py
project_0/: celery.py  routing.py  settings.py  urls.py
project_0/project_0/: settings.py
project_0/static/css/: _sidebar.css  base.css  buttons.css  colors.css  dashboard.css  sb-admin-2.css  transaction_list.css
project_0/static/js/: transaction_list.js
resources/: custom_mcc.json  mcc.json
templates/: base.html  index.html  navbar.html
templates/partials/: _footer.html  _navbar.html  _sidebar.html
templates/test/: base.html  index.html
templates/test/partials/: _footer.html  _navbar.html  _sidebar.html
tests/celery_tasks/: conftest.py  test_get_bank_statementr.py  utils.py
transactions/: apps.py  filters.py  forms.py  models.py  tables.py  urls.py  utils.py  views.py
transactions/collector/: bot.py  serializers.py  signals.py  tasks.py
transactions/management/commands/: startbot.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_options.py  0003_transfer.py
(+15 files in other folders)
