[tool.poetry]
name = "project-0"
version = "0.1.0"
description = ""
authors = ["Kostyantin Zahorodnyi <constantine2903@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
marshmallow = "^3.23.2"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
colorlog = "^6.9.0"
celery = {extras = ["redis"], version = "^5.4.0"}
djangorestframework = "^3.15.2"
django = "^5.1.4"
pylint = "^3.3.3"
django-environ = "^0.11.2"
mypy = "^1.14.1"
pytelegrambotapi = "^4.26.0"
django-celery-beat = "^2.7.0"
dash = "^2.0"
django-plotly-dash = "^2.4.3"
channels = "^4.2.0"
daphne = "^4.1.2"
redis = "^5.2.1"
django-redis = "^5.4.0"
channels-redis = "^4.2.1"
dash-renderer = "^1.9.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
python-telegram-bot = "^21.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
